Integración de la estética

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -41,4 +41,9 @@ $(function() {
           "search" : ""
       }
   });
+    $("select.chosen").chosen();
+    $("select.submit-on-select").change(
+            function(){$(this).parents("form").submit();}
+    )
+    $("select.submit-on-select").val("").trigger('chosen:updated');
 });
