--- a/app/assets/stylesheets/_general.scss.erb
+++ b/app/assets/stylesheets/_general.scss.erb
@@ -65,3 +65,35 @@
         display: block;
     }
 }
+
+.short-info {
+
+    padding: 1ex;
+
+    .icon{
+        padding-right: 3px;
+    }
+
+    .action {
+        padding-right: 5px;
+        padding-left: 5px;
+    }
+
+    .slide {
+        max-width: 0;
+        overflow: hidden;
+        display: inline-block;
+        @include transition(0.3s ease-in-out);
+    }
+
+    &:hover {
+        padding-right: 1ex;
+        .slide {
+            max-width: 1000px;
+        }
+    }
+}
+
+.pointer {
+    cursor: pointer;
+}
