--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -45,6 +45,7 @@
         <% end %>
       </div>
     </div>
+    <% if current_user_admin? %>
     <div class="card-col col-lg-5">
       <div align="center">
         <h2><%= 'Assign:' %></h2>
@@ -68,6 +69,7 @@
         <% end %>
       </div>
     </div>
+    <%end%>
 
 
     <div class="card-col col-xs-5 col-sm-5 col-md-5 col-lg-5">
