--- a/app/assets/javascripts/timeline.js.erb
+++ b/app/assets/javascripts/timeline.js.erb
@@ -3,7 +3,7 @@ $().ready(function() {
   $(".resources-list .toggle-documents, .resources-list h2").click(function(e) {
     var obj = $(this).parent().children(".toggle-documents");
 
-      if(obj.length == 0)
+      if($(this).parent().children("ul").length == 0)
         return;
 
     var list = obj.siblings("ul");
