--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -3,7 +3,7 @@
   <strong><%= t('add_notes') %></strong>
   <p>
     <%= n.label t('note') %><br>
-    <%= n.text_area :text %>
+    <%= n.text_field :text %>
   </p>
   <p>
     <%= n.label t('note_visibility')%><br>
@@ -11,7 +11,7 @@
   </p>
 
   <p>
-    <%= n.hidden_field(:author_id, :value =>current_user.id) %>
+    <%= n.hidden_field(:author_id, :value =>current_user.person_id) %>
     <%= n.hidden_field(:created_at, :value =>Time.now) %>
     <%= n.hidden_field(:updated_at, :value =>Time.now) %>
   </p>
