--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -15,9 +15,8 @@
             <p><%= @milestone.description %></p>
             <p><%=t(@milestone.status) %></p>
             <p><%=
-                if @milestone.status != :done
+                if @milestone.status != 'done'
                   session[:return_to] ||= request.referer
-                else
                   link_to t(:markdone), milestone_path(@milestone, :milestone  => {:status => :done}), :method => :put
                 end
             %></p>
