--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -87,8 +87,9 @@
 
               </div>
 
-
-              <div class="calendar"><%=l(e.due_date, format: "%A, %B %d %Y")%></div>
+              <% if e.due_date %>
+                <div class="calendar"><%=l(e.due_date, format: "%A, %B %d %Y")%></div>
+              <% end %>
               <ul class="tags">
                 <!--<li>Speaker</li>-->
               </ul>
