--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -28,6 +28,7 @@ $nav-background: $midnightblue;
 $nav-hover: $peterriver;
 
 $body-background: #F4F4F4;
+$body-background-dark: #d4d4d4;
 
 html, body {
   width: 100%;
