--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -47,6 +47,21 @@
       <% end %>
   <% end %>
 
+  <%= form_tag ({:action => 'assign_project', :controller => 'people', :person_id => @person_vew.id}) do   %>
+      <% if not @projects.empty? %>
+          <label>
+            <%= t('people_assign_to') %>
+          </label>
+          <select name="project_id" class="chosen submit-on-select" data-placeholder="Agregar un proyecto">
+            <% @projects.each do |p|
+              if not @person_vew.projects.exists?(p.id)%>
+                    <option value= <%=p.id%> > <%=p.name%></option>
+            <%  end
+            end %>
+          </select>
+      <% end %>
+  <% end %>
+
   <% if @milestones and not @milestones.empty? %>
       <ul id="milestone-list">
         <% @milestones.each do |e| %>
