Cambios de Alfred-100 implementados

--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,3 +1,48 @@
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+
+      <div class="table-container">
+        <h1><%= t('tag_index_header') %></h1>
+        <table class="table datatable">
+          <thead>
+          <tr>
+            <td><%= t('id') %></td>
+            <td><%= t('name') %></td>
+            <td></td>
+            <td></td>
+          </tr>
+          </thead>
+          <tbody>
+          <% @tags.each do |t| %>
+              <tr>
+                <td><%= t.id %></td>
+                <td><%= t.name %></td>
+                <td><%= link_to edit_tag_path(t) do%>
+                      <span class='large-text glyphicon glyphicon-pencil'></span>
+                  <% end %>
+                </td>
+                <td><%= link_to tag_path(t),
+                                method: :delete,
+                                data: { confirm: t('sure?') } do %>
+                      <span class='large-text glyphicon glyphicon-remove'></span>
+                  <% end %>
+                </td>
+
+              </tr>
+          <% end %>
+          </tbody>
+        </table>
+      </div>
+
+
+    </div>
+  </div>
+</div>
+
+
+
+<!--
 <h1><%= t('tag_index_header') %></h1>
 <table class="table">
   <tr>
@@ -26,4 +71,4 @@
 </table>
 <% if tags.size == 0 %>
     <em><%= t('tag_no_tags') %></em>
-<% end %>
+<% end %>-->
