--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -11,8 +11,13 @@
           </div>
 
           <div class="form-group">
+            <%= f.label t('description'), class: "control-label" %>
+            <%= f.text_field :description, class: "form-control", 'data-validation': "required" %>
+          </div>
+
+          <div class="form-group">
             <% if @milestone.feedback? %>
-              <%=      f.label t('milestone_reviewer')%>
+              <%= f.label t('milestone_reviewer')%>
               <br>
               <%= f.select :feedback_author, Person.all.collect {|t| [t.name, t.id]}, {}, {:multiple => false, :class => "input-lg"} %>
             <% end %>
@@ -24,7 +29,15 @@
             <%= select_tag(:tags, options_from_collection_for_select(@tags, :id, :name, @milestone.tags.map { |t| t.id } ), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('select_tags'), 'style'=> 'width:100%') %>
           </div>
 
-          <div class="row">
+          <div class="form-group">
+            <%= f.label t('assign_to'), class: "control-label" %>
+
+            <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('select_people'), 'style'=> 'width:100%') %>
+
+          </div>
+
+
+        <div class="row">
             <div class="form-group col-xs-6">
               <%= f.label t('milestone_due_date'), class: "control-label" %>
               <div class="input-group">
@@ -34,24 +47,8 @@
             </div>
           </div>
 
-          <div class="row">
-
-            <div class="form-group col-xs-12">
-              <%= f.label t('assign_to'), class: "control-label" %><br>
-              <%count=0%>
-              <% Person.all.each do |p| %>
-                <%if !@milestone.people.exists?(p.id)%>
-                  <% count=count+1 %>
-                  <input type="checkbox" name=<%=p.name%> value=<%=p.id%> > <%=p.name%> <%if count%2==0%><br><%end%>
-                <% end %>
-              <% end %>
-
-            </div>
-
-          </div>
-
           <div class="btn">
-            <%= f.button t('milestone_edit_submit'), options= :type => 'submit', class: "btn btn-default" %>
+            <%= f.button t('milestone_edit_submit'),:type => 'submit', class: "btn btn-default" %>
           </div>
       <% end %>
 
