reformule como se veia todo

--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,3 +1,5 @@
+<div>
+<h4>Agregar Nota</h4>
 <%= form_for([@milestone, @milestone.notes.build], html: { 'data-toggle': 'validator'}) do |n| %>
     <%= n.text_field :text, 'data-validation': "required", class: "submit-on-enter"%>
     <%= n.select(:visibility,options_for_select(
@@ -6,4 +8,8 @@
                                      ["&#xe105".html_safe,:every_body]]),
                  {}, {class: "glyphicon"}
         )%>
+
 <% end %>
+  <br>
+  <br>
+</div>
